добавлен селектор дочерних классов

--- a/Lab_1_new/my_first_page.html
+++ b/Lab_1_new/my_first_page.html
@@ -108,6 +108,11 @@
     border-image-source: linear-gradient(to left, #fe019a , #7df9ff);
 }
 
+/* селектор дочерних классов */
+      td > input{
+          font-family: Cursive;
+      }
+
 
   </style>
 </head>
