как сделать канвас нормально кликабельным ((((

--- a/Lab_2/drawing.html
+++ b/Lab_2/drawing.html
@@ -149,11 +149,12 @@
 
      */
   </script>
-  <script src="draw_area.js"></script>
+  <!-- <script src="draw_area.js"></script> -->
+  <script src="small_example.js"></script>
 </head>
 <body>
 
-<canvas id="graph" width="650" height="650">
+<canvas id="ex" width="650" height="650">
   <p>Ваш браузер не поддерживает рисование.</p>
 </canvas>
 </body>
