--- a/Lab_2/view.html
+++ b/Lab_2/view.html
@@ -466,9 +466,9 @@
         </table>
     </form>
 </main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="src/new_val.js"></script>
-<script src="src/val.js"></script>
+<script src="src/val.js"></script> -->
 <script src="draw_area.js"></script>
 </body>
 </html>
