--- a/Lab_2/view.html
+++ b/Lab_2/view.html
@@ -172,6 +172,13 @@
             padding-left: 200px;
         }
 
+        button {
+            background-color: #202224;
+        }
+        button:checked {
+            background-color: darkgray;
+        }
+
         /*
         #error{
             padding-left: 200px;
