--- a/lab2/lab2/src/main/webapp/main_page.html
+++ b/lab2/lab2/src/main/webapp/main_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- Заголовок - отображается как вкладка в браузере  -->
-    <title>My First Web Lab ^. .^ &#129293;</title>
+    <title>My Second Web Lab ^. .^ &#129293;</title>
     <!-- Здесь будем задавать стиль на CSS -->
     <style>
         body {
@@ -194,7 +194,7 @@
     <div>
         Нечаева Анна Анатольевна
         <p>R3238</p>
-        <p>Вариант #1418</p>
+        <p>Вариант #918918</p>
 
     </div>
 </header>
