--- a/lab_2_renew/src/main/webapp/main_page.html
+++ b/lab_2_renew/src/main/webapp/main_page.html
@@ -1,222 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Внутри head находится блок служебной информации  -->
 <head>
     <meta charset="UTF-8">
-    <!-- Заголовок - отображается как вкладка в браузере  -->
     <title>My Second Web Lab ^. .^ &#129293;</title>
-    <!-- Здесь будем задавать стиль на CSS -->
-    <style>
-        body {
-            /*background-color: #30363b ;
-            background: #272b2e;
-
-             */
-            background: #202224;
-            cursor: auto;
-        }
-        /* header div и header div p -- селекторы потомств */
-        /* здесь же задан общий вид шапки, см тз */
-        header div p {
-            font-size: 30px;
-        }
-
-        header div {
-            background-image: linear-gradient(to right,#69b7eb, #b3dbd3, #f4d6db);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-size: 50px;
-            font-family: Cursive;
-            text-align: center;
-
-        }
-        .borderName:hover{
-            border-image-slice: 1;
-            border-width: 2px;
-            border-style: solid;
-            border-image-source: linear-gradient(to left,  #69b7eb, #b3dbd3, #f4d6db);
-        }
-
-        #xTitle{
-            color: #b3dbd3;
-            font-size: 25px;
-        }
-        #yTitle{
-            font-size: 25px;
-        }
-        #rTitle{
-            background-image: linear-gradient(to right, #69b7eb, #b3dbd3, #f4d6db);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-size: 25px;
-        }
-
-
-        #submitButton{
-            background-image: linear-gradient(to right, #69b7eb, #b3dbd3, #f4d6db);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-size: 25px;
-        }
-        #clear{
-            background-image: linear-gradient(to right, #69b7eb, #b3dbd3, #f4d6db);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-size: 25px;
-        }
-        /* :hover -- ример селектора псевдокласса */
-        .submitButton:hover{
-            background-image: linear-gradient(to left, #69b7eb, #b3dbd3, #f4d6db);
-            border-image-slice: 1;
-            border-width: 2px;
-            border-style: solid;
-            border-image-source: linear-gradient(to left,  #69b7eb, #b3dbd3, #f4d6db);
-            cursor: pointer;
-        }
-        /* пример использования селектора псевдоэлемента */
-        input::placeholder{
-            font-family: Cursive;
-            font-size: medium;
-        }
-
-        .paddingEl{
-            padding: 15px;
-        }
-        #paddingR{
-            padding-left: 150px;
-        }
-        .paddingTable{
-            padding-left: 80px;
-            padding-top: 50px;
-        }
-        #xSelectorStyle{
-            background-image: linear-gradient(to bottom, #69b7eb, #b3dbd3, #f4d6db);
-        }
-        .xClicked{
-            font-family: Cursive;
-        }
-        .xClicked:hover{
-            background-color: #202224;
-            color: #f4d6db;
-        }
-        .xClicked:checked{
-            background-color: #202224;
-            color: #b3dbd3;
-        }
-        #yTextField {
-            text-align: center;
-            background-color: #202224;
-            color: #b3dbd3;
-            font-size: 15px;
-            border-image-slice: 1;
-            border-width: 2px;
-            border-style: solid;
-            border-image-source: linear-gradient(to left, #69b7eb, #b3dbd3, #f4d6db);
-        }
-        #yTextField:hover {
-            color: #202224;
-            background-image: linear-gradient(to left, #69b7eb, #b3dbd3, #f4d6db);
-        }
-        .rRadio:hover{
-            cursor: pointer;
-        }
-
-        .clickedElement:hover{
-            border-image-slice: 1;
-            border-width: 2px;
-            border-style: solid;
-            border-image-source: linear-gradient(to left, #69b7eb, #b3dbd3, #f4d6db);
-        }
-
-        /* селектор дочерних классов */
-        td > input{
-            font-family: Cursive;
-        }
-        #paddingPic{
-            padding-left: 200px;
-            color: #b3dbd3;
-            font-size: 25px;
-            font-family: Cursive;
-            text-align: center;
-        }
-        span{
-            background-image: linear-gradient(to right,#69b7eb, #b3dbd3, #f4d6db);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-size: 20px;
-            font-family: Cursive;
-            text-align: center;
-        }
-        #reqTable{
-            background-image: linear-gradient(to right,#69b7eb, #b3dbd3, #f4d6db);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-size: 20px;
-            font-family: Cursive;
-            text-align: center;
-        }
-        .resText{
-            text-align: center;
-            font-size: 30px;
-            padding-left: 30px;
-        }
-        .resPadding{
-            padding-left: 100px;
-            padding-top: 50px;
-        }
-        .inTableResPadding{
-            padding-left: 30px;
-        }
-        #prevAnswersText{
-            padding-left: 200px;
-        }
-
-        button {
-            background-color: #202224;
-        }
-        button:checked {
-            background-color: darkgray;
-        }
-
-        /*
-        #error{
-            padding-left: 200px;
-        }
-
-         */
-
-
-    </style>
+    <link rel="stylesheet" href="style_of_pages.css">
 </head>
 <body>
-<!-- Внутри header находится шапка сайта -->
+
 <header>
     <div>
         Нечаева Анна Анатольевна
         <p>R3238</p>
         <p>Вариант #918918</p>
-
     </div>
 </header>
-<!-- В main содержится основная информация о странице  -->
 <main>
-    <!-- В form будут собираться данные для отправки на сервер, скрипт, которому передается управление, в action указан  -->
-    <form id="form" method="get">
-        <!-- Табличная верстка летс гоу  -->
-        <!-- Основная таблица -->
+    <form id="form" method="post">
         <table>
             <tr>
                 <td>
                     <table>
                         <tr>
-                            <!--  Здесь должна быть картинка   -->
                             <td>
                                 <!-- <img src="light_blue.png" id="paddingPic" alt="А график? ^. .^ &#128148;"> -->
                                 <canvas id="graph" width="650" height="650">
                                     <p>Ваш браузер не поддерживает рисование.</p>
                                 </canvas>
                             </td>
-
                             <td>
                                 <!-- Таблица с предыдущими результатами  -->
                                 <table class="resPadding">
@@ -243,27 +53,22 @@
                                             <span>Время работы</span>
                                         </td>
                                     </tr>
-
                                     <table class="resPadding">
                                         <tr>
                                             <td>
                                                 <span  id="reqTable">
-
                                                 </span>
                                             </td>
                                         </tr>
-
                                     </table>
+                               </table>
+                            </td>
+                        </tr>
                     </table>
                 </td>
             </tr>
-
-        </table>
-        </td>
-        </tr>
-        <tr>
-            <td>
-                <!-- эта таблица отвечает за выбираемые кнопки  -->
+            <tr>
+                <td>
                 <table class="paddingTable">
                     <tr>
                         <td>
@@ -362,7 +167,6 @@
                     <tr class="paddingEl">
                         <td class="submit paddingEl" >
                             <input id="submitButton" type="submit" value="Проверить точку"  />
-
                         </td>
                         <!-- <td class="submit paddingEl">
                              <input id="clear" id="submitButton" type="submit" value="Очистить таблицу" />
@@ -379,6 +183,6 @@
 <script src="src/new_val.js"></script>
 <script src="src/val.js"></script> -->
 <script src="draw_area.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="../../../../lab2/lab2/src/main/webapp/script.js"></script>
 </body>
 </html>
