--- a/lab_2_renew/src/main/webapp/index.html
+++ b/lab_2_renew/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>My Second Web Lab ^. .^ &#129293;</title>
@@ -16,7 +16,7 @@
     <br>
 </header>
 <main>
-    <form id="form" method="post">
+    <form id="form">
         <table id="mainPad">
             <tr>
                 <td>
@@ -55,22 +55,6 @@
                                                 </tr>
                                             </table>
                                         </td>
-                                       <!-- <td>
-                                            <table class="borderName">
-                                                <tr>
-                                                    <td>
-                                                        <span id="yTitle">Ввод координаты Y:</span>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="paddingEl">
-                                                        <input id="yTextField" class="selectingAreas" type="text" name="Y"
-                                                               tabindex="3"
-                                                               placeholder="(-5;3)">
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </td>-->
                                     </tr>
                                     <tr>
                                         <td>
@@ -153,47 +137,12 @@
                                     </tr>
                                 </table>
                             </td>
-                            <td>
-                                <!-- Таблица с предыдущими результатами  -->
-                               <!-- <table class="resPadding">
-                                    <tr>
-                                        <span id="prevAnswersText">Предыдущие результаты:</span>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <span>Попала?</span>
-                                        </td>
-                                        <td class="inTableResPadding">
-                                            <span>X</span>
-                                        </td>
-                                        <td class="inTableResPadding">
-                                            <span>Y</span>
-                                        </td>
-                                        <td class="inTableResPadding">
-                                            <span>R</span>
-                                        </td>
-                                        <td class="inTableResPadding">
-                                            <span>Текущее время</span>
-                                        </td>
-                                        <td class="inTableResPadding">
-                                            <span>Время работы</span>
-                                        </td>
-                                    </tr>
-                                    <table class="resPadding">
-                                        <tr>
-                                            <td>
-                                                <span  id="reqTable">
-                                                </span>
-                                            </td>
-                                        </tr>
-                                    </table>
-                               </table> -->
-                            </td>
                         </tr>
                     </table>
                 </td>
             </tr>
             <tr>
+
                 <td class="borderName">
                     <!-- Таблица с предыдущими результатами  -->
                     <table class="resPadding" >
@@ -220,118 +169,19 @@
                                 <span>Время работы</span>
                             </td>
                         </tr>
-                    </table>
-               <!-- <table class="paddingTable">
-                    <tr>
-                        <td>
-                            <table class="borderName">
-                                <tr>
-                                    <td>
-                                        <span id="xTitle">Выбор координаты X:</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="paddingEl">
-                                        <select name="X" id = "xSelectorStyle" size="3" >
-                                            <option class="xClicked" value="-5">-5</option>
-                                            <option class="xClicked" value="-4">-4</option>
-                                            <option class="xClicked" value="-3">-3</option>
-                                            <option class="xClicked" value="-2">-2</option>
-                                            <option class="xClicked" value="-1">-1</option>
-                                            <option class="xClicked" value="0">0</option>
-                                            <option class="xClicked" value="1">1</option>
-                                            <option class="xClicked" value="2">2</option>
-                                            <option class="xClicked" value="3">3</option>
-                                        </select>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                        <td>
-                            <table class="borderName">
-                                <tr>
-                                    <td>
-                                        <span id="yTitle">Ввод координаты Y:</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="paddingEl">
-                                        <input id="yTextField" class="selectingAreas" type="text" name="Y"
-                                               tabindex="3"
-                                               placeholder="(-5;3)">
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <table id="paddingR" class="borderName">
-                                <tr>
-                                    <td>
-                                        <span id="rTitle">Выбор значения R:</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="paddingEl">
-                                            <span class="clickedElement">
-                                                <button id ="b1" class="rRadio" type="button"  name="R" tabindex="1"
-                                                        placeholder="Параметр R"
-                                                        value="1" >
-                                                <span>1</span></button>
-                                            </span>
-                                        <span class="clickedElement">
-                                                <button id ="b1.5" class="rRadio" type="button"  name="R" tabindex="1"
-                                                        placeholder="Параметр R"
-                                                        value="1.5" >
-                                                <span>1.5</span></button>
-                                            </span>
-                                        <span class="clickedElement">
-                                                <button  id ="b2" class="rRadio" type="button"  name="R" tabindex="1"
-                                                         placeholder="Параметр R"
-                                                         value="2" >
-                                                <span>2</span></button>
-                                            </span>
-                                        <span class="clickedElement">
-                                                <button id ="b2.5" class="rRadio" type="button"  name="R" tabindex="1"
-                                                        placeholder="Параметр R"
-                                                        value="2.5" >
-                                                <span>2.5</span></button>
-                                            </span>
-                                        <span class="clickedElement">
-                                                <button id = "b3" class="rRadio" type="button"  name="R" tabindex="1"
-                                                        placeholder="Параметр R"
-                                                        value="3" >
-                                                <span>3</span></button>
-                                            </span>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span id="exceptionFieldX"></span>
-                            <span id="exceptionFieldY"></span>
-                            <span id="exceptionFieldR"></span>
-                        </td>
-                    </tr>
-                    <tr class="paddingEl">
-                        <td class="submit paddingEl" >
-                            <input id="submitButton" type="submit" value="Проверить точку"  />
-                        </td>
+                        <tr>
+                            <div id="resultBox">
 
-                    </tr>
-                </table> -->
-            </td>
-        </tr>
+                            </div>
+                        </tr>
+
+                    </table>
+                </td>
+            </tr>
         </table>
     </form>
 </main>
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="src/new_val.js"></script>
-<script src="src/val.js"></script> -->
-<script src="draw_area.js"></script>
-<script type="text/javascript" src="../../../../lab2/lab2/src/main/webapp/script.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
+<script type="text/javascript" src="draw_area.js"></script>
 </body>
 </html>
