--- a/lab_2_renew/src/main/webapp/index.html
+++ b/lab_2_renew/src/main/webapp/index.html
@@ -24,9 +24,51 @@
                         <tr>
                             <td>
                                 <!-- <img src="light_blue.png" id="paddingPic" alt="А график? ^. .^ &#128148;"> -->
-                                <canvas id="graph" width="650" height="650">
+                                <!--<canvas id="graph" width="650" height="650">
                                     <p>Ваш браузер не поддерживает рисование.</p>
-                                </canvas>
+                                </canvas>-->
+                                <svg width="600" height="600">
+                                    <!-- задаем прямоугольник-->
+                                    <rect x="60" y="300" width="240" height="120" fill-opacity="0.7" stroke="#424379"
+                                          fill="#424379"></rect>
+                                    <polygon points="300,300 300,60 420,300" fill-opacity="0.7" stroke="#424379"
+                                             fill="#424379"></polygon>
+                                    <path d="M300 300 L 420 300 C 420 300 420 420 300 420" fill-opacity="0.7" stroke="#424379"
+                                          fill="#424379"></path>
+                                    <!-- отрисовка осей -->
+                                    <line x1="0" y1="300" x2="600" y2="300" stroke="black"></line>
+                                    <line x1="300" y1="0" x2="300" y2="600" stroke="black"></line>
+                                    <!-- засечки на осях -->
+                                    <line x1="540" y1="296" x2="540" y2="304" stroke="black"></line>
+                                    <line x1="420" y1="296" x2="420" y2="304" stroke="black"></line>
+                                    <line x1="180" y1="296" x2="180" y2="304" stroke="black"></line>
+                                    <line x1="60" y1="296" x2="60" y2="304" stroke="black"></line>
+                                    <!-- подписи на оси х -->
+                                    <text x="580" y="290">X</text>
+                                    <text x="535" y="290">R</text>
+                                    <text x="410" y="290">R/2</text>
+                                    <text x="165" y="290">-R/2</text>
+                                    <text x="50" y="290">-R</text>
+                                    <!-- засечки на осях -->
+                                    <line x1="296" y1="540" x2="304" y2="540" stroke="black"></line>
+                                    <line x1="296" y1="420" x2="304" y2="420" stroke="black"></line>
+                                    <line x1="296" y1="180" x2="304" y2="180" stroke="black"></line>
+                                    <line x1="296" y1="60" x2="304" y2="60" stroke="black"></line>
+
+                                    <!-- подписи на оси y -->
+                                    <text x="310" y="15">Y</text>
+                                    <text x="310" y="60">R</text>
+                                    <text x="310" y="180">R/2</text>
+                                    <text x="310" y="420">-R/2</text>
+                                    <text x="310" y="540">-R</text>
+                                    <!-- стрелочки на осях-->
+                                    <polygon points="600,300 595,305 595, 295" fill="black" stroke="black"></polygon>
+                                    <polygon points="300,0 295,5 305,5" fill="black" stroke="black"></polygon>
+
+                                    <!-- ипо точки -->
+                                    <circle id="point" r="5" cx="150" cy="150"
+                                            fill-opacity="0.7" fill="red" stroke="firebrick" visibility="hidden"></circle>
+                                </svg>
                             </td>
                             <td>
                                 <table class="paddingTable">
