need some fixes

--- a/lab_2_renew/src/main/webapp/index.html
+++ b/lab_2_renew/src/main/webapp/index.html
@@ -82,7 +82,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td class="paddingEl">
-                                                        <select name="X" id = "xSelectorStyle" size="3" >
+                                                        <select name="x" id = "xSelectorStyle" size="3" >
                                                             <option class="xClicked" value="-5">-5</option>
                                                             <option class="xClicked" value="-4">-4</option>
                                                             <option class="xClicked" value="-3">-3</option>
@@ -108,7 +108,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td class="paddingEl">
-                                                        <input id="yTextField" class="selectingAreas" type="text" name="Y"
+                                                        <input id="yTextField" class="selectingAreas" type="text" name="y"
                                                                tabindex="3"
                                                                placeholder="(-5;3)">
                                                     </td>
@@ -127,31 +127,31 @@
                                                 <tr>
                                                     <td class="paddingEl">
                                             <span class="clickedElement">
-                                                <button id ="b1" class="rRadio" type="button"  name="R" tabindex="1"
+                                                <button id ="b1" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="1" >
                                                 <span>1</span></button>
                                             </span>
                                                         <span class="clickedElement">
-                                                <button id ="b1.5" class="rRadio" type="button"  name="R" tabindex="1"
+                                                <button id ="b1.5" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="1.5" >
                                                 <span>1.5</span></button>
                                             </span>
                                                         <span class="clickedElement">
-                                                <button  id ="b2" class="rRadio" type="button"  name="R" tabindex="1"
+                                                <button  id ="b2" class="rRadio" type="button"  name="r" tabindex="1"
                                                          placeholder="Параметр R"
                                                          value="2" >
                                                 <span>2</span></button>
                                             </span>
                                                         <span class="clickedElement">
-                                                <button id ="b2.5" class="rRadio" type="button"  name="R" tabindex="1"
+                                                <button id ="b2.5" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="2.5" >
                                                 <span>2.5</span></button>
                                             </span>
                                                         <span class="clickedElement">
-                                                <button id = "b3" class="rRadio" type="button"  name="R" tabindex="1"
+                                                <button id = "b3" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="3" >
                                                 <span>3</span></button>
@@ -224,6 +224,6 @@
     </form>
 </main>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-<script type="text/javascript" src="draw_area.js"></script>
+<script type="text/javascript" src="new_script.js"></script>
 </body>
 </html>
