--- a/lab_2_renew/src/main/webapp/index.html
+++ b/lab_2_renew/src/main/webapp/index.html
@@ -127,7 +127,8 @@
                                                 <tr>
                                                     <td class="paddingEl">
                                             <span class="clickedElement">
-                                                <button id ="b1" class="rRadio" type="button"  name="r" tabindex="1"
+                                                <input name="r" type="text" placeholder="(2;5)">
+                                                <!--<button id ="b1" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="1" >
                                                 <span>1</span></button>
@@ -154,7 +155,7 @@
                                                 <button id = "b3" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="3" >
-                                                <span>3</span></button>
+                                                <span>3</span></button> -->
                                             </span>
                                                     </td>
                                                 </tr>
