lets try to go to java...

--- a/lab_2_renew/src/main/webapp/index.html
+++ b/lab_2_renew/src/main/webapp/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html> -->
 <html>
 <head>
     <meta charset="UTF-8">
     <title>My Second Web Lab ^. .^ &#129293;</title>
     <link rel="stylesheet" href="new_style.css">
+    <link rel="icon" href="https://se.ifmo.ru/o/helios-theme/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -213,9 +214,11 @@
                             </td>
                         </tr>
                         <tr>
-                            <div id="resultBox">
+                            <td>
+                                <div id="resultBox">
 
-                            </div>
+                                </div>
+                            </td>
                         </tr>
 
                     </table>
