--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -68,7 +68,7 @@
 
                                     <!-- ипо точки -->
                                     <circle id="point" r="5" cx="150" cy="150"
-                                            fill-opacity="0.7" fill="red" stroke="firebrick" visibility="hidden"></circle>
+                                            fill-opacity="0.7" fill="cyan" stroke="firebrick" visibility="hidden"></circle>
                                 </svg>
                             </td>
                             <td>
