--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -17,7 +17,7 @@
     <br>
 </header>
 <main>
-    <form id="form">
+    <form id="form" method="post">
         <table id="mainPad">
             <tr>
                 <td>
@@ -68,7 +68,7 @@
 
                                     <!-- ипо точки -->
                                     <circle id="point" r="5" cx="150" cy="150"
-                                            fill-opacity="0.7" fill="cyan" stroke="firebrick" visibility="hidden"></circle>
+                                            fill-opacity="0.7" fill="cyan" stroke="cyan" visibility="hidden"></circle>
                                 </svg>
                             </td>
                             <td>
@@ -187,51 +187,12 @@
                 </td>
             </tr>
             <tr>
-
-               <!-- <td class="borderName">
-            <tr>-->
                 <td class="borderName">
                     <div id="resultBox">
 
                     </div>
                 </td>
             </tr>
-                    <!-- Таблица с предыдущими результатами  -->
-                    <!--<table class="resPadding" >
-                        <tr>
-                            <span id="prevAnswersText">Предыдущие результаты:</span>
-                        </tr>-->
-                       <!-- <tr>
-                            <td>
-                                <span>Попала?</span>
-                            </td>
-                            <td class="inTableResPadding">
-                                <span>X</span>
-                            </td>
-                            <td class="inTableResPadding">
-                                <span>Y</span>
-                            </td>
-                            <td class="inTableResPadding">
-                                <span>R</span>
-                            </td>
-                            <td class="inTableResPadding">
-                                <span>Текущее время</span>
-                            </td>
-                            <td class="inTableResPadding">
-                                <span>Время работы</span>
-                            </td>
-                        </tr>-->
-                       <!-- <tr>
-                            <td>
-                                <div id="resultBox">
-
-                                </div>
-                            </td>
-                        </tr>
-
-                    </table>-->
-                <!--</td>
-            </tr>-->
         </table>
     </form>
 </main>
