--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -129,6 +129,34 @@
                                                     <td class="paddingEl">
                                             <span class="clickedElement">
                                                 <input name="r" type="text" placeholder="(2;5)">
+                                               <!-- <input class="rRadio" type="radio"  name="r" tabindex="1"
+                                                       placeholder="Параметр R"
+                                                       value="1" >
+                                               <span>1</span></inputbutton>
+                                           </span>
+                                                       <span class="clickedElement">
+                                               <input class="rRadio" type="radio"  name="r" tabindex="1"
+                                                       placeholder="Параметр R"
+                                                       value="1.5" >
+                                               <span>1.5</span></input>
+                                           </span>
+                                                       <span class="clickedElement">
+                                               <input class="rRadio" type="radio"  name="r" tabindex="1"
+                                                        placeholder="Параметр R"
+                                                        value="2" >
+                                               <span>2</span></input>
+                                           </span>
+                                                       <span class="clickedElement">
+                                               <input class="rRadio" type="radio"  name="r" tabindex="1"
+                                                       placeholder="Параметр R"
+                                                       value="2.5" >
+                                               <span>2.5</span></input>
+                                           </span>
+                                                       <span class="clickedElement">
+                                               <input class="rRadio" type="radio"  name="r" tabindex="1"
+                                                       placeholder="Параметр R"
+                                                       value="3" >
+                                               <span>3</span></input> -->
                                                 <!--<button id ="b1" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="1" >
@@ -197,6 +225,6 @@
     </form>
 </main>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-<script type="text/javascript" src="new_script.js"></script>
+<script type="text/javascript" src="scr.js"></script>
 </body>
 </html>
