--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -128,8 +128,8 @@
                                                 <tr>
                                                     <td class="paddingEl">
                                             <span class="clickedElement">
-                                                <input name="r" type="text" placeholder="(2;5)">
-                                               <!-- <input class="rRadio" type="radio"  name="r" tabindex="1"
+                                                <!--<input name="r" type="text" placeholder="(2;5)">-->
+                                                <input class="rRadio" type="radio"  name="r" tabindex="1"
                                                        placeholder="Параметр R"
                                                        value="1" >
                                                <span>1</span></inputbutton>
@@ -156,7 +156,7 @@
                                                <input class="rRadio" type="radio"  name="r" tabindex="1"
                                                        placeholder="Параметр R"
                                                        value="3" >
-                                               <span>3</span></input> -->
+                                               <span>3</span></input>
                                                 <!--<button id ="b1" class="rRadio" type="button"  name="r" tabindex="1"
                                                         placeholder="Параметр R"
                                                         value="1" >
@@ -225,6 +225,6 @@
     </form>
 </main>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-<script type="text/javascript" src="scr.js"></script>
+<script type="text/javascript" src="new_script.js"></script>
 </body>
 </html>
