--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -225,6 +225,6 @@
     </form>
 </main>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-<script type="text/javascript" src="new_script.js"></script>
+<script type="text/javascript" src="renew_scr.js"></script>
 </body>
 </html>
