делаем красивее (наверное)

--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -226,7 +226,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="borderName">
+                <td class="borderName" style="background-color: rgb(66,67,121)">
                     <div id="resultBox">
 
                     </div>
