я что-то понимаю!!! табличка почти пофиксена

--- a/lab2_javax/src/main/webapp/index.html
+++ b/lab2_javax/src/main/webapp/index.html
@@ -226,10 +226,18 @@
                 </td>
             </tr>
             <tr>
-                <td class="borderName" style="background-color: rgb(66,67,121)">
-                    <div id="resultBox">
+                <!--<td class="borderName" style="background-color: rgb(66,67,121)">-->
+                <td>
+                    <table>
+                        <tr>
+                            <td>
+                                <div id="resultBox" class="borderName" style="background-color: rgb(66,67,121)">
 
-                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+
                 </td>
             </tr>
         </table>
